# arvim

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: commands.cpp  commands.h  controller.cpp  controller.h  document.cpp  document.h  main.cpp  observer.h  terminal_view.cpp  terminal_view.h  view_decorator.cpp  view_decorator.h  view_interface.h
